--- a/app/src/main/res/layout/fragment_save_game.xml
+++ b/app/src/main/res/layout/fragment_save_game.xml
@@ -179,6 +179,7 @@
                 android:autofillHints=""/>
 
             <EditText
+
                 android:layout_marginStart="10dp"
                 android:id="@+id/team2Score1"
                 style="@style/EditTextStyle"
@@ -379,6 +380,7 @@
                 style="@style/EditTextStyle"
                 android:hint="@string/total_0"
                 android:textSize="12sp"
+                android:maxLength="14"
                 android:layout_weight="3"
                 android:autofillHints=""/>
 
@@ -387,6 +389,7 @@
                 style="@style/EditTextStyle"
                 android:hint="@string/total_0"
                 android:textSize="12sp"
+                android:maxLength="14"
                 android:layout_weight="3"
                 android:autofillHints=""/>
         </LinearLayout>
