--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,10 @@
         <item name="android:inputType">numberSigned</item>
         <item name="android:hint">Skor</item>
         <item name="android:layout_weight">2</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxWidth">50dp</item>
+        <item name="android:maxLength">6</item>
+
 
     </style>
 
