--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#AE3C3C</color>
+    <color name="red2">#FF0000</color>
+
     <color name="green">#22D11B</color>
 
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText" >
