--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_enabled="true" android:state_focused="true">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:bottom="1dp"
+        android:left="-2dp"
+        android:right="-2dp"
+        android:top="-2dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/black" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/red" />
-        </shape>
-    </item>
-
-    <item android:state_enabled="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
-            <corners android:radius="10dp" />
+            <size android:height="1dp" />
             <stroke android:width="1dp" android:color="@color/white" />
         </shape>
     </item>
 
-</selector>
+</layer-list>
