--- a/app/src/main/res/layout/fragment_finished_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_game_detail.xml
@@ -31,7 +31,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/goToFinishedGameFragment"
-                android:text="Oyun detay"
+                android:text="@string/game_detail"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -39,51 +39,82 @@
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
+
         android:id="@+id/linearLayout"
         style="@style/LinearLayoutStyle"
-        android:paddingStart="10dp"
-        android:paddingTop="20dp"
-        android:paddingEnd="10dp"
+        android:padding="10dp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolBar">
 
-        <TextView
-            style="@style/TextViewStyle"
-            />
 
-        <EditText
-            android:hint="@string/team1Name"
-            android:id="@+id/team1Name"
-            style="@style/EditTextStyle"
-            android:autofillHints="" />
+        <LinearLayout
+            style="@style/LinearLayoutStyle"
+            android:padding="10dp"
+            android:background="@drawable/custom_layout_border"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="45dp">
 
-        <EditText
-            android:hint="@string/team2Name"
-            android:id="@+id/team2Name"
-            style="@style/EditTextStyle"
-            android:layout_marginStart="10dp"
-            android:autofillHints="" />
+
+
+            <EditText
+                android:hint="@string/team1Name"
+                android:id="@+id/team1Name"
+                style="@style/EditTextStyle"
+                android:autofillHints="" />
+
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+            <EditText
+                android:hint="@string/team2Name"
+                android:id="@+id/team2Name"
+                style="@style/EditTextStyle"
+                android:autofillHints="" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
+        android:background="@drawable/custom_layout_border"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="60dp"
         android:id="@+id/scoreContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="10dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
+        android:padding="20dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <TextView
-            android:id="@+id/roundLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/round_scores"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+
+
+        <LinearLayout style="@style/LinearLayoutStyle">
+
+            <TextView
+                android:layout_weight="3"
+                style="@style/TextViewStyle" />
+
+            <TextView
+                android:id="@+id/roundLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/round_scores"
+                android:textColor="@color/white"
+                android:layout_marginStart="10dp"
+                android:textSize="18sp" />
+
+            <TextView
+                style="@style/TextViewStyle" />
+        </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
 
@@ -95,13 +126,24 @@
                 android:id="@+id/team1Score1"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+
 
             <EditText
-
                 android:id="@+id/team2Score1"
                 style="@style/EditTextStyle"
-                android:layout_marginStart="10dp"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -114,11 +156,24 @@
                 android:id="@+id/team1Score2"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+
 
             <EditText
                 android:id="@+id/team2Score2"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -131,11 +186,24 @@
                 android:id="@+id/team1Score3"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score3"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -148,11 +216,23 @@
                 android:id="@+id/team1Score4"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score4"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -165,11 +245,23 @@
                 android:id="@+id/team1Score5"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score5"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -182,11 +274,23 @@
                 android:id="@+id/team1Score6"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score6"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -199,11 +303,23 @@
                 android:id="@+id/team1Score7"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score7"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -216,11 +332,23 @@
                 android:id="@+id/team1Score8"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score8"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -233,11 +361,23 @@
                 android:id="@+id/team1Score9"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score9"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -250,11 +390,23 @@
                 android:id="@+id/team1Score10"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score10"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayoutStyle">
@@ -267,40 +419,63 @@
                 android:id="@+id/team1Score11"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="25dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score11"
                 style="@style/EditTextStyle"
                 android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout
             style="@style/LinearLayoutStyle"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
+
 
             <TextView
                 style="@style/TextViewStyle"
-                android:layout_weight="2"
+                android:layout_weight="5"
                 android:text="@string/total_scores"
                 android:textSize="12sp" />
 
             <EditText
                 android:id="@+id/team1TotalScore"
                 style="@style/EditTextStyle"
+                android:autofillHints=""
+                android:hint="@string/total_0"
+                android:maxLength="14"
+                android:textSize="12sp" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/team2TotalScore"
+                style="@style/EditTextStyle"
                 android:autofillHints=""
                 android:hint="@string/total_0"
                 android:maxLength="14"
                 android:textSize="12sp" />
 
-            <EditText
-                android:id="@+id/team2TotalScore"
-                style="@style/EditTextStyle"
-                android:layout_weight="3"
-                android:autofillHints=""
-                android:hint="@string/total_0"
-                android:maxLength="14"
-                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
