--- a/app/src/main/res/layout/fragment_save_game.xml
+++ b/app/src/main/res/layout/fragment_save_game.xml
@@ -152,262 +152,426 @@
     <LinearLayout
         android:visibility="invisible"
         android:id="@+id/scoreContainer"
+        android:layout_below="@id/base_cardview"
+        android:background="@drawable/custom_layout_border"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/base_cardview"
-        android:layout_marginTop="10dp"
-        android:paddingTop="10dp"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp">
+        android:padding="20dp">
 
-        <TextView
-            android:textColor="@color/white"
-            android:id="@+id/roundLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/round_scores"
-            android:textSize="18sp"
-            android:layout_marginStart="60dp"
-            android:layout_marginBottom="8dp"/>
+        <LinearLayout style="@style/LinearLayoutStyle">
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+            <TextView
+                android:layout_weight="3"
+                style="@style/TextViewStyle" />
+
+            <TextView
+                android:id="@+id/roundLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/round_scores"
+                android:textColor="@color/white"
+                android:layout_marginStart="10dp"
+                android:textSize="18sp" />
+
+            <TextView
+                style="@style/TextViewStyle" />
+        </LinearLayout>
+
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_1"/>
+                android:text="@string/round_1" />
 
             <EditText
                 android:id="@+id/team1Score1"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+
 
             <EditText
-
-                android:layout_marginStart="10dp"
                 android:id="@+id/team2Score1"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_2"/>
+                android:text="@string/round_2" />
 
             <EditText
                 android:id="@+id/team1Score2"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
+
 
             <EditText
                 android:id="@+id/team2Score2"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_3"/>
+                android:text="@string/round_3" />
 
             <EditText
                 android:id="@+id/team1Score3"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score3"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_4"/>
+                android:text="@string/round_4" />
 
             <EditText
                 android:id="@+id/team1Score4"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score4"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_5"/>
+                android:text="@string/round_5" />
 
             <EditText
                 android:id="@+id/team1Score5"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score5"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_6"/>
+                android:text="@string/round_6" />
 
             <EditText
                 android:id="@+id/team1Score6"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score6"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_7"/>
+                android:text="@string/round_7" />
 
             <EditText
                 android:id="@+id/team1Score7"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score7"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_8"/>
+                android:text="@string/round_8" />
 
             <EditText
                 android:id="@+id/team1Score8"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score8"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_9"/>
+                android:text="@string/round_9" />
 
             <EditText
                 android:id="@+id/team1Score9"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score9"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_10"/>
+                android:text="@string/round_10" />
 
             <EditText
                 android:id="@+id/team1Score10"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2Score10"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/LinearLayoutStyle">
+        <LinearLayout style="@style/LinearLayoutStyle">
 
             <TextView
                 style="@style/TextViewStyle"
-                android:text="@string/round_11"/>
+                android:text="@string/round_11" />
 
             <EditText
                 android:id="@+id/team1Score11"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:focusable="true"
+                android:autofillHints="" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="25dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
+                android:focusable="true"
                 android:id="@+id/team2Score11"
                 style="@style/EditTextStyle"
-                android:autofillHints=""/>
+                android:autofillHints="" />
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="20dp"
-            style="@style/LinearLayoutStyle">
+            style="@style/LinearLayoutStyle"
+            android:layout_marginTop="10dp">
+
 
             <TextView
-                android:layout_weight="2"
-                android:textSize="12sp"
                 style="@style/TextViewStyle"
-                android:text="@string/total_scores"/>
+                android:layout_weight="5"
+                android:text="@string/total_scores"
+                android:textSize="12sp" />
 
             <EditText
                 android:id="@+id/team1TotalScore"
                 style="@style/EditTextStyle"
+                android:autofillHints=""
                 android:hint="@string/total_0"
-                android:textSize="12sp"
                 android:maxLength="14"
+                android:textSize="12sp" />
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:layout_weight="3"
-                android:autofillHints=""/>
+                android:layout_width="0dp"
+                android:layout_height="20dp">
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/vertical_line" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/team2TotalScore"
                 style="@style/EditTextStyle"
+                android:autofillHints=""
                 android:hint="@string/total_0"
-                android:textSize="12sp"
                 android:maxLength="14"
-                android:layout_weight="3"
-                android:autofillHints=""/>
+                android:textSize="12sp" />
+
         </LinearLayout>
 
-            <Button
-                android:layout_marginStart="60dp"
-                android:background="@drawable/custom_button"
-                android:id="@+id/saveGame"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/save_game" />
+        <Button
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="60dp"
+            android:background="@drawable/custom_button"
+            android:id="@+id/saveGame"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:text="@string/save_game" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
