--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,16 +28,17 @@
         <item name="android:maxLines">1</item>
         <item name="android:maxWidth">50dp</item>
         <item name="android:maxLength">6</item>
-
+        <item name="android:focusable">false</item>
 
     </style>
+
 
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_weight">1</item>
+        <item name="android:layout_weight">4</item>
 
     </style>
 
