--- a/app/src/main/res/layout/fragment_save_game.xml
+++ b/app/src/main/res/layout/fragment_save_game.xml
@@ -94,6 +94,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/difference_0"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
                             android:layout_marginStart="50dp"
                             app:layout_constraintStart_toEndOf="@+id/arrow_button"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -182,7 +184,7 @@
                         android:layout_marginStart="10dp"
                         android:text="@string/round_scores"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView style="@style/TextViewStyle" />
